# fast-api-oauth

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.provisions/docker-fast-api-startup-script/: 0-install-pipenv.sh
.provisions/docker/fast-api/dev/: Dockerfile  docker-entrypoint.sh
.provisions/docker/mongo/mongo-init-js/: 0-generate-keyfile.sh  1-init-db.js
.provisions/mongo-init-js/: 0-init-db.js
app/: app_bootstrap.py  conftest.py  fast_api_app.py  fast_api_cli.py  sandbox.py
app/apps/login/: app.py  models.py  repository.py  router.py
app/apps/login/api/: endpoints.py  shemes.py
app/apps/login/services/: authentication.py
app/apps/login/templates/: login.html
app/apps/login/view/: endpoints.py  schemes.py
app/apps/oauth/: app.py  exceptions.py  models.py  repository.py  router.py
app/apps/oauth/api/: endpoints.py  shemes.py
app/apps/oauth/security/: oauth2.py
app/apps/oauth/services/: authentication.py  constants.py  exceptions.py  oauth_manager.py  token_manager.py
app/apps/oauth/view/: endpoints.py  schemes.py
app/apps/registration/: app.py  router.py
app/apps/registration/api/: endpoints.py  schemas.py
app/apps/user/: app.py  models.py  repository.py  router.py
app/apps/user/api/: schemes.py
app/core/auth/: password_generator.py  verification_token.py
app/core/dependency/: beanie_odm.py  exceptions.py  security.py
app/core/email/: conf.py  send_email.py
app/core/exception_handler/: root.py  validations.py
app/core/exceptions/: base.py  validation.py
app/core/middlewares/: cors.py
app/core/pydantic/: decorator.py  fields.py
app/core/schemas/: actions.py  constants.py
app/core/security/: jwt.py
app/libs/app_loader/: __init__.py  bootstrap.py
app/libs/beanie_odm_ext/: document_repository.py  exceptions.py  mongo_db.py  repository.py  session.py  transaction.py
app/libs/click_cli/: base.py  bootstrap_cli.py  command_cli.py  fast_api_cli.py
app/libs/jwt_auth/: exceptions.py  manager.py  tokens.py
app/libs/managment/: __init__.py  conf.py  env_loader.py  loader.py
app/libs/oauth_flow/: constants.py  exceptions.py  manager.py
app/libs/odm_repository/: exceptions.py  metadata.py  repository.py
app/libs/system_app/: app.py
app/libs/token_generator/: generator.py
app/libs/utils/: datetime.py  lazy.py  managment.py
app/settings/: __init__.py  logging.py  routes.py  settings.py  settings_test.py
app/utils/: module_loading.py  mongo_conf.py
os_requirements/: detect_os.sh  install_requirements.sh
os_requirements/pacman/: requirements-uranos.pacman
os_requirements/python_requirements/: install.sh
(+45 files in other folders)
