[project]
name = "fast-api-oauth"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic", # Fixed typo: changed from pydentic
    "pydantic-settings",
    "asyncclick",
    "uvicorn[standard]",
    "httpx",
    "asgi-lifespan",
    "pytest-mock",
    "pytest-asyncio",
    "email-validator",
    "fastapi-mail",
    "itsdangerous",
    "bcrypt==4.0.1",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "pyotp",
    "polyfactory",
    "beanie",
    "typing-extensions",
    "pytest-env",
]

# ==== Dependency Groups ====
[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-sugar",
    "mypy",
    "pre-commit",
    "watchfiles",
    "polyfactory",
    "pytest-asyncio",
    "ruff", # Added Ruff to handle linting, formatting, and import sorting
]

# ==== UV Configuration ====
[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# ==== Ruff (Replaces Black, Flake8, and iSort) ====
[tool.ruff]
target-version = "py312"
line-length = 119        # Kept your preference from your old black/pylint config
src = ["app"]

[tool.ruff.lint]
# E/W = Flake8 Errors/Warnings, F = Pyflakes, I = isort, B = Bugbear, UP = Pyupgrade, N = PEP8 Naming
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = []

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==== Pytest & Environment ====
[tool.pytest_env]
FAST_API_SETTINGS_DEFAULT_PATH = "app.settings.settings_test:TestSettings"
TESTING = "True"
MONGO_DB_NAME = "test_db"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Mypy Type Checking ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# ==== Coverage ====
[tool.coverage.run]
include = ["settings/**"]
omit = ["*/tests/*"]

# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_celery",
]

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
